Added logic for Beer Mapping API and show basic information on the screen. Minimal stlying added except to separate the elements for clear distinction.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 <body>
 
-  <div id="names"></div>
+  <div class="container" id="main-container"></div>
+
+  <div class="search-bar">
+    
+  </div>
 
 
   <div id="response"></div>
