Added dropdown searching functionality, but only for 4 states for now

--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
 </head>
 <body>
 
+  <div class="container search-bar" id="search-bar">
+    <form id=search-form>
+      <select id="state-select">
+        <option value="CA">CA</option>
+        <option value="NJ">NJ</option>
+        <option value="NY">NY</option>
+        <option value="CT">CT</option>
+      </select>
+      <button type="submit" id="search-button">Search</button>
+    </form>
+  </div>
+
   <div class="container" id="main-container"></div>
 
-  <div class="search-bar">
-    
   </div>
 
 
