--- a/index.html
+++ b/index.html
@@ -14,32 +14,42 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="javascript/project.js"></script>
   
+  
 </head>
 <body>
 
-  <div class="container search-bar" id="search-bar">
-    <form id=search-form>
-      <select id="state-select">
-        <option value="CA">CA</option>
-        <option value="NJ">NJ</option>
-        <option value="NY">NY</option>
-        <option value="CT">CT</option>
-      </select>
-      <button type="submit" id="search-button">Search</button>
-    </form>
-  </div>
+  <div class="content">
 
-  <div class="container" id="main-container"></div>
+    <div class="container search-bar" id="search-bar">
+      <form id=search-form>
+        <input type="text" id="city-search">
+        <select id="state-select">
+          <option value="CA">CA</option>
+          <option value="NJ">NJ</option>
+          <option value="NY">NY</option>
+          <option value="CT">CT</option>
+        </select>
+        <button type="submit" id="search-button">Search</button>
+      </form>
+    </div>
+
+    <div class="container" id="main-container">
+      <div id="brewery-list"></div>
+
+      <div id="map"></div>
+
+    </div>
 
   </div>
 
 
   <div id="response"></div>
 
-    
-<script src="./javascript/project.js">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDl9v8uXtsfQWQPQz_VFpW8qk2gHDk4SuM&callback=initMap" async></script>
+  <script src="./javascript/project.js"></script>
 
-</script>
+
+
 </body>
 
 </html>
