Switch from beer mapping API to Google Places API as it has more locations to chose from

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div id="response"></div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDl9v8uXtsfQWQPQz_VFpW8qk2gHDk4SuM&callback=initMap" async></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDl9v8uXtsfQWQPQz_VFpW8qk2gHDk4SuM&callback=initMap&libraries=places" async></script>
   <script src="./javascript/project.js"></script>1
 
 
