added ticketmaster api

--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
     <div class="container" id="main-container">
       <div id="brewery-list"></div>
 
-      <div id="map"></div>
-
+      <div id="map"></div> 
     </div>
+
+    <form id="event-form">
+        <label for ="event-input">Search for an event</label>
+        <input type ="text" id="event-input"> 
+        <br>
+        <label for ="city-input">Where?</label>
+        <input type ="text" id="city-input"> 
+        <input id= "search-event" type="submit" value="Search"> 
+    </form>
+        <br>
+        <div class="events-view"></div>
 
   </div>
 
