Combined the Ticketmaster and Google Maps API code. User can now search an event, and when deciding a venue, it will show bars in the surrounding area.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div class="container search-bar" id="search-bar">
       <form id=search-form>
+        <input type="text" id="event-search">
         <input type="text" id="city-search">
         <select id="state-select">
           <option value="CA">CA</option>
@@ -34,7 +35,7 @@
     </div>
 
     <div class="container" id="main-container">
-      <div id="brewery-list"></div>
+      <div id="results-list"></div>
 
       <div id="map"></div> 
     </div>
