--- a/index.html
+++ b/index.html
@@ -19,40 +19,83 @@
 </head>
 <body>
 
-  <div class="content">
-
-    <div class="container search-bar" id="search-bar">
+  <section id ="section1">
+    <div class="container search-bar" class="container1" id="search-bar">
       <div class="row">
-        <form class="container" id=search-form>
-          <div class="row">
-              <input class="input-field col s-12" type="text" id="event-search">
-          </div>
-          <div class="row">
-              <input class=" input-field col s6" type="text" id="city-search">
-              <div class="input-field col s6">
-                <select id="state-select">
-                  <option value="CA">CA</option>
-                  <option value="NJ">NJ</option>
-                  <option value="NY">NY</option>
-                  <option value="CT">CT</option>
-                </select>
-              </div>
-          </div>
-          <div class="row">
-              <button class="col s4 offset-s4 waves-effect waves-light btn" type="submit" id="search-button">Search</button>
-          </div>
-        </form>
+<form class="container" id=search-form>
+<div class="row">
+    <input class=" input-field col s6" type="text" id="city-search">
+    <div class="input-field col s6">
+        <select id="state-select">
+            <option value="CA">CA</option>
+            <option value="NJ">NJ</option>
+            <option value="NY">NY</option>
+            <option value="CT">CT</option>
+          </select>
+    </div>
+</div>
+</form>
       </div>
     </div>
+
+    <div class="row">
+      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn">Next
+      </a>
+    </div>
+  </section>
+
+<section id="section2">
+<div class="container search-bar" id="search-bar" class="container2">
+<div class="row">
+<form class="container" id=search-form>
+<div class="row">
+    <input class="input-field col s-12" type="text" id="event-search">
+</div>
+<div class="row">
+    <button class="col s4 offset-s4 waves-effect waves-light btn" type="submit" id="search-button">Search</button>
+</div>
+</form>
+</div>
+<div class="row">
+    <a href="#section3" id="clicker">
+      Next
+    </a>
+    </div>
+</div>
+</section>
+
+
+
+
+<section id ="section3">
 
     <div class="container" id="main-container">
       <div class="row">
-          <div class="col m6 cards-container" id="results-list"></div>
+          <div class="col m6 cards-container" id="results-list1"></div>
 
           <div class="col m6" id="map"></div> 
       </div>
+      <div class="row">
+          <a href="#section4" id="clicker">
+            Next
+          </a>
+          </div>
       
     </div>
+  </section>
+
+
+
+<section id="section4">
+    <div class="container" id="main-container">
+        <div class="row">
+            <div class="col m6 cards-container" id="results-list"></div>
+  
+            <div class="col m6" id="map"></div> 
+        </div>
+        
+      </div>
+</section>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDl9v8uXtsfQWQPQz_VFpW8qk2gHDk4SuM&callback=initMap&libraries=places" async></script>
   <script src="./javascript/project.js"></script>
