Made search button in section 2 scroll down to the last section to the results when the api response is received.

--- a/index.html
+++ b/index.html
@@ -22,25 +22,20 @@
   <section id ="section1">
     <div class="container search-bar" class="container1" id="search-bar">
       <div class="row">
-<form class="container" id=search-form>
-<div class="row">
-    <input class=" input-field col s6" type="text" id="city-search">
-    <div class="input-field col s6">
-        <select id="state-select">
+        <input placeholder="Enter a city (Optional)" class="input-field col s6" type="text" id="city-search">
+        <div class="input-field col s6">
+          <select id="state-select">
             <option value="CA">CA</option>
             <option value="NJ">NJ</option>
             <option value="NY">NY</option>
             <option value="CT">CT</option>
           </select>
-    </div>
-</div>
-</form>
+        </div>
       </div>
     </div>
 
     <div class="row">
-      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn">Next
-      </a>
+      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn">Next</a>
     </div>
   </section>
 
@@ -48,17 +43,14 @@
   <div class="container search-bar" id="search-bar" class="container2">
 
     <div class="row">
-      <form class="container" id=search-form>
+      <div class="container" id=search-form>
         <div class="row">
-            <input class="input-field col s-12" type="text" id="event-search">
+            <input placeholder="What do you want to see?" class="input-field col s-12" type="text" id="event-search">
         </div>
         <div class="row">
-            <button  class="col s4 offset-s4 waves-effect waves-light btn" type="submit" id="search-button">Search</button>
+            <a href="#section3" id="search-button" class="button col s4 offset-s4 waves-effect waves-light btn">Search</a>
         </div>
-      </form>
-    </div>
-    <div class="row">
-      <a href="#section3" id="clicker">Next</a>
+      </div>
     </div>
   </div>
 </section>
