--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 </head>
 <body>
 
+<section id="section0">
+<div>
+  n i g h t   o u t 
+</div>
+</section>
+
   <section id ="section1">
     <div class="container search-bar" class="container1" id="search-bar">
       <div class="row">
