--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
-
+  <!-- <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Vidaloka" rel="stylesheet">
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
@@ -18,16 +19,28 @@
   
 </head>
 <body>
-
 <section id="section0">
-<div>
-  n i g h t   o u t 
+<div id="overlay0">
+  <div class="col s12 m2">
+ <p class="nightout"> N i g h t         O u t </p>
+ <br> 
+ <p class="nightout"> going out is so much work. let's make it a little easier. 
+</div>
+<br>
+<br>
+<div class="row">
+  <a href="#section1" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn red lighten-3 z-depth-5">get started</a>
+</div>
 </div>
 </section>
 
+
   <section id ="section1">
+      <div class="col s12 m2">
+          <p class="nightout"> where do you want to go out? </p>
+         </div>
     <div class="container search-bar" class="container1" id="search-bar">
-      <div class="row">
+      <div class="row section1-content">
         <input placeholder="Enter a city (Optional)" class="input-field col s6" type="text" id="city-search">
         <div class="input-field col s6">
           <select id="state-select">
@@ -41,17 +54,19 @@
     </div>
 
     <div class="row">
-      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn">Next</a>
+      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
     </div>
   </section>
 
 <section id="section2">
+    <div class="col s12 m2">
+        <p class="nightout"> want to catch that big game? get those tickets to that broadway show you've been dying to see?</p>
+       </div>
   <div class="container search-bar" id="search-bar" class="container2">
-
-    <div class="row">
+    <div class="row section1-content">
       <div class="container" id=search-form>
         <div class="row">
-            <input placeholder="What do you want to see?" class="input-field col s-12" type="text" id="event-search">
+            <input placeholder="the world is your oyster" class="input-field col s-12" type="text" id="event-search">
         </div>
         <div class="row">
             <a href="#section3" id="search-button" class="button col s4 offset-s4 waves-effect waves-light btn">Search</a>
