minor changes to style

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       </div>
     </div>
   </div>
+    <div class="row">
+  <div class="col s12">
+      <p class="noideatext"> no idea what you want to do? That's okay. We've got you. Just click next and see what's happening in your area!</p>
+     </div>
+    </div>
 </section>
 
 
