--- a/index.html
+++ b/index.html
@@ -34,8 +34,26 @@
 </div>
 </section>
 
+<section id="section1">
+    <div class="col s12 m2">
+        <p class="nightout">when were you thinking of going out.</p>
+       </div>
+  <div class="container search-bar" id="search-bar" class="container2">
+    <div class="row section1-content">
+      <div class="container" id=search-form>
+        <div class="row">
+            <input placeholder="pick" class="input-field col s-12" type="text" id="event-search">
+        </div>
+        <div class="row">
+            <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light btn">Search</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <section id ="section1">
+
+  <section id ="section2">
       <div class="col s12 m2">
           <p class="nightout"> where do you want to go out? </p>
          </div>
@@ -100,11 +118,11 @@
     </div>
 
     <div class="row">
-      <a href="#section2" id="clicker" class="button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
+      <a href="#section3" id="clicker" class="button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
     </div>
   </section>
 
-<section id="section2">
+<section id="section3">
     <div class="col s12 m2">
         <p class="nightout"> want to catch that big game? get those tickets to that broadway show you've been dying to see?</p>
        </div>
@@ -115,7 +133,7 @@
             <input placeholder="the world is your oyster" class="input-field col s-12" type="text" id="event-search">
         </div>
         <div class="row">
-            <a href="#section3" id="search-button" class="button col s4 offset-s4 waves-effect waves-light btn">Search</a>
+            <a href="#section4" id="search-button" class="button col s4 offset-s4 waves-effect waves-light btn">Search</a>
         </div>
       </div>
     </div>
@@ -130,7 +148,7 @@
 
 
 
-<section id ="section3">
+<section id ="section4">
 
     <div class="container3" class="container" id="main-container">
       <div class="row">
