--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <section id ="section1">
       <div class="col s12 m2">
-          <p class="nightout"> where do you want to go out? </p>
+          <p class="nightout line anim-typewriter"> where do you want to go out? </p>
          </div>
     <div class="container search-bar" class="container1" id="search-bar">
       <div class="row section1-content">
@@ -106,7 +106,7 @@
 
 <section id="section2">
     <div class="col s12 m2">
-        <p class="nightout"> want to catch that big game? get those tickets to that broadway show you've been dying to see?</p>
+        <p class="nightout">what are you dying to see?</p>
        </div>
   <div class="container search-bar" id="search-bar" class="container2">
     <div class="row section1-content">
