adding test typewriter

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <section id ="section2">
       <div class="col s12 m2">
-          <p class="nightout"> where do you want to go out? </p>
+          <p class="nightout line anim-typewriter"> where do you want to go out? </p>
          </div>
     <div class="container search-bar" class="container1" id="search-bar">
       <div class="row section1-content">
