Cathching up to master

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <section id ="section4">
 
-    <div class="container3" class="container" id="main-container">
+    <div class="container3 container"  id="main-container">
       <div class="row">
           <div class="col m8 cards-container" id="results-list"></div>
  
