additional changes to css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="row">
-              <a href="#section2" id="clicker" class="clicker button col s4 offset-s4 waves-effect waves-light btn">Next</a>
+              <a href="#section2" id="clicker" class="clicker button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
           </div>
         </div>
       </div>
@@ -140,14 +140,14 @@
             <input placeholder="the world is your oyster" class="input-field col s-12" type="text" id="event-search">
         </div>
         <div class="row">
-            <a href="#section4" id="search-button" class="clicker button col s4 offset-s4 waves-effect waves-light btn">Search</a>
+            <a href="#section4" id="search-button" class="clicker button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Search</a>
         </div>
       </div>
     </div>
   </div>
     <div class="row">
   <div class="col s12">
-      <p class="noideatext"> no idea what you want to do? That's okay. We've got you. Just click next and see what's happening in your area!</p>
+      <p class="noideatext"> no idea what you want to do? That's okay. We've got you. Just click next to see what's happening in your area!</p>
      </div>
     </div>
 </section>
