working on UI of final page

--- a/index.html
+++ b/index.html
@@ -156,7 +156,15 @@
 
 
 <section id ="section4">
+  <div class="container">
+    <div class="row">
+    <div class="col m8">
+        <p class="line anim-typewriter finalpage"> hm what do you want to see...</p>
+       </div>
 
+    <div class="col m4 finalpage"> location is key! </div>
+  </div>
+</div>
     <div class="container3" class="container" id="main-container">
       <div class="row">
           <div class="col m8 cards-container" id="results-list"></div>
