more css changes

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 <section id ="section4">
   <div class="container">
     <div class="row">
-    <div class="col m8">
-        <p class="line anim-typewriter finalpage"> hm what do you want to see...</p>
+    <div class="col m7">
+        <p class="finalpage"> hmm what do you want to see...</p>
        </div>
-
+<div class="cold m1"></div>
     <div class="col m4 finalpage"> location is key! </div>
   </div>
 </div>
