css updates to content writing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section id="section1">
   <div id="date-select">
     <div class="col s12 m2">
-      <p class="nightout line anim-typewriter">when were you thinking of going out.</p>
+      <p class="nightout line anim-typewriter">when's the big night out?</p>
       </div>
     <div class="container" class="container2">
       <div class="row section1-content">
