--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section id="section0">
 <div id="overlay0">
   <div class="col s12 m2">
- <p class="nightout"> N i g h t         O u t </p>
+ <p class="nightout"> N i g h t         O u t <img src="if_traveling_icon_flat_outline-10_3405123.png"width="42" height="40"> </p>
  <br> 
  <p class="nightout"> going out is so much work. let's make it a little easier. 
 </div>
