typewriter working on all pages now

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <section id="section0">
 <div id="overlay0">
   <div class="col s12 m2">
- <p class="nightout"> N i g h t         O u t <img src="if_traveling_icon_flat_outline-10_3405123.png"width="42" height="40"> </p>
+ <p class="nightout"> N i g h t         O u t <img src="if_traveling_icon_flat_outline-10_3405123.png"width="42" height="42"> </p>
+
  <br> 
  <p class="nightout"> going out is so much work. let's make it a little easier. 
 </div>
@@ -51,7 +52,7 @@
             </div>
           </div>
           <div class="row">
-              <a href="#section2" id="clicker" class="clicker button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
+              <a href="#section2" id="clicker1" class="clicker1 button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
           </div>
         </div>
       </div>
@@ -62,7 +63,7 @@
 
   <section id ="section2">
       <div class="col s12 m2">
-          <p class="nightout line anim-typewriter"> where do you want to go out? </p>
+          <p class="nightout line1 anim-typewriter1"> where do you want to go out? </p>
          </div>
     <div class="container search-bar" class="container1" id="search-bar">
       <div class="row section1-content">
@@ -125,13 +126,13 @@
     </div>
 
     <div class="row">
-      <a href="#section3" id="clicker" class="clicker button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
+      <a href="#section3" id="clicker2" class="clicker2 button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Next</a>
     </div>
   </section>
 
 <section id="section3">
     <div class="col s12 m2">
-        <p class="nightout line anim-typewriter"> What have you been dying to see?</p>
+        <p class="nightout line2 anim-typewriter2"> What have you been dying to see?</p>
        </div>
   <div class="container search-bar" id="search-bar" class="container2">
     <div class="row section1-content">
@@ -140,7 +141,7 @@
             <input placeholder="the world is your oyster" class="input-field col s-12" type="text" id="event-search">
         </div>
         <div class="row">
-            <a href="#section4" id="search-button" class="clicker button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Search</a>
+            <a href="#section4" id="search-button" class="clicker3 button col s4 offset-s4 waves-effect waves-light #f5f5f5 grey lighten-4 btn text-color z-depth-5">Search</a>
         </div>
       </div>
     </div>
