making the headers on each page responsive

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 
 <section id="section1">
   <div id="date-select">
+    <div class="row>">
     <div class="col s12 m2">
       <p class="nightout line anim-typewriter">when's the big night out?</p>
       </div>
+    </div>
     <div class="container" class="container2">
 
       <div class="row section1-content search-form">
