Made the final page mobile-friendly

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
     </div>
 
     <div class="row">
-        <div class="col m8 cards-container" id="results-list"></div>
+        <div class="col s12 m8 cards-container" id="results-list"></div>
 
-        <div class="col m4" id="map"></div>
+        <div class="col s12 m4" id="map"></div>
     </div>
 
     <div class="row">
