--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="container" id=search-form>
         <div class="row">
           <br>
-            <input placeholder="the world is your oyster" class="input-field col s-12" type="text" id="event-search">
+            <input placeholder="~the world is your oyster~" class="input-field col s-12" type="text" id="event-search">
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@
 
     <div class="row" id="results-message">
       <div class="col m7">
-          <p class="finalpage"> hmm what do you want to see...</p>
+          <p class="finalpage finalpage2"> hmm what do you want to see...</p>
           </div>
       <div class="col m1"></div>
       <div class="col m4 finalpage"> location is key! </div>
